Small lesson fix

--- a/lessons/02.md
+++ b/lessons/02.md
@@ -65,7 +65,7 @@ Ao implementar tal teste, tenha em mente que, ao digitar um comando válido do C
 
 Por padrão, [comandos de _query_](https://docs.cypress.io/api/table-of-contents#Queries) do Cypress, como [`cy.get`](https://docs.cypress.io/api/commands/get) e [`cy.contains`](https://docs.cypress.io/api/commands/contains), esperam por até 4 segundos antes de falhar, através de um mecanismo chamado [_Retry-ability_](https://docs.cypress.io/app/core-concepts/retry-ability).
 
-Mas e se esse um servidor demora mais do que 4 segundos para responder?
+Mas e se esse servidor demorar mais do que 4 segundos para responder?
 
 Uma alternativa para lidar com tal situação é alterar o _timeout_ padrão de um comando de _query_, como `cy.get` ou `cy.contains`, para um tempo maior. Algo assim: `cy.get("#outputArea", { timeout: 6000 })`.
 
